--- a/Collab/Collab/Base.lproj/Main.storyboard
+++ b/Collab/Collab/Base.lproj/Main.storyboard
@@ -1,11 +1,77 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="7OI-aJ-Nzb">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Name Table View Controller-->
+        <scene sceneID="EE8-6P-sZJ">
+            <objects>
+                <viewController id="7OI-aJ-Nzb" customClass="NameTableViewController" customModule="Collab" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3TN-F4-GRc"/>
+                        <viewControllerLayoutGuide type="bottom" id="WRL-Lx-XgF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NVG-Fh-FGX">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Hes-KW-ipl">
+                                <rect key="frame" x="0.0" y="143" width="600" height="457"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="nameCell" id="bQy-Sz-eTc">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bQy-Sz-eTc" id="qQQ-Mh-hCS">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <animations/>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Collab" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N32-E2-m2T">
+                                <rect key="frame" x="242" y="41" width="116.5" height="55"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" name="AvenirNext-UltraLight" family="Avenir Next" pointSize="40"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z7B-Z0-p0A">
+                                <rect key="frame" x="289" y="108" width="22" height="22"/>
+                                <animations/>
+                                <connections>
+                                    <action selector="addButtonPressed:" destination="7OI-aJ-Nzb" eventType="touchUpInside" id="M4F-Sh-ZDb"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" red="0.13725490196078433" green="0.13725490196078433" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Hes-KW-ipl" firstAttribute="top" secondItem="N32-E2-m2T" secondAttribute="bottom" constant="47" id="9VM-zz-WfN"/>
+                            <constraint firstItem="N32-E2-m2T" firstAttribute="centerX" secondItem="NVG-Fh-FGX" secondAttribute="centerX" id="BeU-sJ-A2c"/>
+                            <constraint firstItem="Hes-KW-ipl" firstAttribute="leading" secondItem="NVG-Fh-FGX" secondAttribute="leadingMargin" constant="-20" id="TP9-8D-z54"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Hes-KW-ipl" secondAttribute="trailing" constant="-20" id="a3p-Km-TSt"/>
+                            <constraint firstItem="WRL-Lx-XgF" firstAttribute="top" secondItem="Hes-KW-ipl" secondAttribute="bottom" id="mrY-32-3ZI"/>
+                            <constraint firstItem="N32-E2-m2T" firstAttribute="top" secondItem="3TN-F4-GRc" secondAttribute="bottom" constant="21" id="xI3-A7-iYo"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="addButton" destination="z7B-Z0-p0A" id="mei-5v-WBQ"/>
+                        <outlet property="tableView" destination="Hes-KW-ipl" id="nvG-vK-NgE"/>
+                        <outlet property="titleLabel" destination="N32-E2-m2T" id="dAl-VS-jZD"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="writeSegue" id="RkD-5K-Qii"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="osw-9x-Mqn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-327" y="399"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
